--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,14 @@
+beautifulsoup4==4.4.0
 Django==1.8.4
-wheel==0.24.0
+django-app-namespace-template-loader==0.3.1
+django-blog-zinnia==0.15.2
+django-contrib-comments==1.6.1
+django-mptt==0.7.4
+django-tagging==0.4
+django-xmlrpc==0.1.5
+mots-vides==2015.5.11
+Pillow==2.9.0
+pyparsing==2.0.3
+pytz==2015.7
+six==1.10.0
+zinnia-theme-bootstrap==0.4
