--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 beautifulsoup4==4.4.0
+bootstrap-admin==0.3.6
 Django==1.8.4
 django-app-namespace-template-loader==0.3.1
 django-blog-zinnia==0.15.2
